--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: main
     <a href="{{post.url | prepend: site.baseurl}}">
       <div class="chapter_inner">
         <p class="chapter_number">{{post.brif}}</p>
-        <h3 class="chapter_title">{{post.title}}</h3>
+        <h3 class="chapter_title" style="background-color: rgba(184, 89, 104, 80);">{{post.title}}</h3>
       </div>
     </a>
   </div>
