--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: main
 ---
+{% include title.html %}
 
 {% for post in paginator.posts %}
-
   <div class="chapter">
     <a href="{{post.url | prepend: site.baseurl}}">
       {% if post.img %}
