--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: main
     <a href="{{post.url | prepend: site.baseurl}}">
       {% if post.img %}
         <img src={{ "/assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+        {% else %}
+        <img src={{post.url}} alt="{{post.title}}">
       {% endif %}
     </a>
     <a href="{{post.url | prepend: site.baseurl}}">
