--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: main
       {% if post.img %}
         <img src={{ "/assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
         {% else %}
-        <img src={{post.url}} alt="{{post.title}}">
+        <img src={{post.link}} alt="{{post.title}}">
       {% endif %}
     </a>
     <a href="{{post.url | prepend: site.baseurl}}">
