--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -12,19 +12,19 @@ permalink: /contact/
   <form action="https://formspree.io/{{site.email}}" method="post" class="form">
     <div class="message js-form-message"></div>
     <div class="form_group">
-        <input type="text" placeholder="Your name" name="name" class="form-input" required>
+        <input type="text" placeholder="你的名字" name="name" class="form-input" required>
     </div>
     <div class="form_group">
-        <input type="email" placeholder="Your e-mail" name="_replyto" class="form-input" required>
+        <input type="email" placeholder="你的邮件" name="_replyto" class="form-input" required>
     </div>
     <div class="form_group">
-        <input type="tel" placeholder="Your phone" name="form_tel" class="form-input">
+        <input type="tel" placeholder="你的电话" name="form_tel" class="form-input">
     </div>
     <div class="form_group">
-        <textarea name="Message" placeholder="Message" cols="25" rows="6" class="form-textarea" required></textarea>
+        <textarea name="Message" placeholder="你的邮箱" cols="25" rows="6" class="form-textarea" required></textarea>
     </div>
     <div class="form_group">
-        <input type="submit" class="form_btn" value="Send">
+        <input type="submit" class="form_btn" value="提交">
     </div>
   </form>
   </div>
