--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -9,7 +9,7 @@ permalink: /contact/
   <div class="container_contact">
   <h3 class="form_title">Send me message</h3>
 
-  <form action="https://formspree.io/{{site.email}}" method="post" class="form">
+  <form action="https://formspree.io/f/xaygovvg" method="post" class="form">
     <div class="message js-form-message"></div>
     <div class="form_group">
         <input type="text" placeholder="你的名字" name="name" class="form-input" required>
