--- a/_pages/about.html
+++ b/_pages/about.html
@@ -12,7 +12,7 @@ permalink: /about/
         </div>
         <div class="author_info">
           <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
-          <p class="author_subtitle" style="width: 80%;">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
+          <p class="author_subtitle" style="margin-left: 5%;margin-right: 5%;">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
         </div>
       </div>
 
