--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <section class="about">
-  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
+  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> 返回主页</a>
   <div class="about_box">
     <div class="author">
         <div class="author_image">
